# python-imbibe

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/python_imbibe/: console.py  wiki.py
src/python_imbibe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: .gitignore  test_console.py
