[tool.poetry]
name = "python-imbibe"
version = "0.1.0"
description = "Python project for code and learn"
homepage = ""
repository = ""
authors = ["Aswathy Nair <aswathy.sreenath9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.22.0"
pytest-mock = "^2.0.0"

[tool.poetry.scripts]
python-imbibe = "python_imbibe.console:main"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
coverage = "^5.0.3"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
